--- a/app/views/taxis/search.html.erb
+++ b/app/views/taxis/search.html.erb
@@ -1,5 +1,7 @@
+ <div class="menu">
+  </div>
 <%= form_with(url: search_taxis_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :departure, placeholder: "出発地を検索する", class: "search-input" %>
+  <%= form.text_field :title, placeholder: "タイトルで検索", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
 <% end %>
 <div class="contents row">
