--- a/app/views/taxis/index.html.erb
+++ b/app/views/taxis/index.html.erb
@@ -6,7 +6,7 @@
   <%= form.submit "検索", class: "search-btn" %>
 <% end %>
 
-      <div class="font-log">
+      <%# <div class="font-log">
         <div>
           <a> ・御観覧有り難うございます。</a>
         </div>
@@ -16,7 +16,7 @@
         <div>
           <a>・ポートフォリオ待ってます。</a>
         </div>
-      </div>
+      </div> %>
   
       <div class="coment-size">
       <div>
